--- a/maharashtra.html
+++ b/maharashtra.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="shortcut icon" href="https://image.flaticon.com/icons/png/512/2785/2785819.png" type="image/x-icon">
     <title>COVID-19 Maharashtra Updates</title>
+    <style>
+      .footer {
+           color: white;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -94,5 +99,10 @@
             });         
         });
     </script>
+    <footer class="footer mt-auto py-3 bg-dark">
+      <div class="container">
+        <center><span>Website Developed by:- Tejas Prabhakar Sonawane.</span></center>
+      </div>
+    </footer>
   </body>
 </html>
