--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="shortcut icon" href="https://image.flaticon.com/icons/png/512/2785/2785819.png" type="image/x-icon">
-    <title>COVID-19 Updates</title>
+    <title>COVID-19 Live Updates of India</title>
     <style>
       .footer {
            color: white;
@@ -30,12 +30,14 @@
             <li class="nav-item">
               <a class="nav-link" href="maharashtra.html">Maharashtra</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="world.html">World</a>
+            </li>
           </ul>
         </div>
       </nav>
       <div class="container">
         <center><h1 class="mt-3 mb-4">COVID-19 Live Updates of India</h1></center>
-        <span id="temp"></span>
         <div class="table-responsive">
             <table class="table table-hover table-bordered">
                 <thead class="thead-dark">
@@ -111,7 +113,6 @@
                     in_death.html(data.statewise[0].deaths);
                     in_recover.html(data.statewise[0].recovered);
                     in_update.html(data.statewise[0].lastupdatedtime);
-                    // showdata.html(Object.keys(data.statewise[0]).length);
                     var html = '';
 						        var i;
                     var statecount = Object.keys(data.statewise).length;
@@ -125,8 +126,6 @@
                                 '<td style="text-align: center;">'+data.statewise[i].recovered+'</td>'+
                                 '<td style="text-align: center;">'+data.statewise[i].lastupdatedtime+'</td>'+
                                 '</tr>';
-                                // console.log(data.statewise[i].state+"  "+ i);
-                        // htmldata = '<tr><td>'+data.statewise[0].state+'</td></tr>';
                     } 
                     $('#state_data').html(html);
                   }
