--- a/maharashtra.html
+++ b/maharashtra.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="shortcut icon" href="https://image.flaticon.com/icons/png/512/2785/2785819.png" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
     <title>COVID-19 Maharashtra Updates</title>
     <style>
       .footer {
@@ -39,7 +40,7 @@
       <div class="container">
         <center><h1 class="mt-3 mb-4">COVID-19 Live Updates of Maharashtra (District Level)</h1></center>
         <div class="table-responsive">
-          <table class="table table-hover table-bordered table-striped">
+          <table class="table table-hover table-bordered table-striped" id="myTable">
               <thead class="thead-dark">
               <tr>
                   <th scope="col" style="text-align: center;">Districts</th>
@@ -61,15 +62,17 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <script>
         $(document).ready(function () {
+          
             $.ajax({
                 url: `https://api.covid19india.org/v2/state_district_wise.json`,
                 type: 'get',
-				dataType: 'json',
-		            success: function(data){
+                dataType: 'json',
+                success: function(data){
                     var html = '';
-				    var i;
+                    var i;
                     var discount = data[19].districtData.length;
                     for(i=0;i<discount;i++)
                     {
@@ -81,7 +84,8 @@
                                 '<td style="text-align: center;">'+data[19].districtData[i].recovered+'</td>'+
                                 '</tr>';
                     } 
-                    $('#dist_data').html(html);   
+                    $('#dist_data').html(html);
+                    $('#myTable').DataTable();
                   }
             });         
         });
